# readcon-db

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  crates_publish.yml  pages.yml  python_wheels.yml
assets/logo/: BRAND.md
docs/: Makefile  design.md  requirements.txt
docs/orgmode/: cooked-soa.org  readme.org
docs/source/: api_c.md  api_fortran.md  api_python.md  api_rust.md  architecture.md  changelog_link.md  conf.py  index.md  install.md  overview.md  workflows.md
examples/: bench_corpus_ops.rs  bench_vs_ase_prep.py  ingest_select.rs
examples/benchmarks/: ase_db_bench.json  ase_fair_campaign_1.json  bench_ase_db.py  db_vs_ase_table.md  fair_campaign.py  fair_db_vs_ase_table.md  readcon_db_bench.json  results_merged.json  test_fair_select_parity.py
examples/workflows/: metatrain_from_con.md  options.metatrain.snippet.yaml
fortran/ReadConDb/: fpm.toml
fortran/ReadConDb/src/: readcon_db.f90
include/: readcon-db.h
python/: pyproject.toml
resources/test/: sulfolene.con  tiny_cuh2.con  tiny_cuh2.convel  tiny_cuh2_forces.con  tiny_cuh2_vel_forces.con  tiny_multi_cuh2.con
src/: cooked_soa.rs  corpus.rs  error.rs  export_xyz.rs  ffi.rs  frame_scalars.rs  keys.rs  lib.rs  python.rs  select.rs  shard.rs
website/: index.html
website/css/: site.css
