[package]
name = "readcon-db"
version = "0.1.0"
edition = "2021"
description = "Mmap-backed CON frame corpus store (Heed/LMDB) with non-SQL selection"
license = "MIT"
repository = "https://github.com/lode-org/readcon-db"
rust-version = "1.75"

[dependencies]
heed = "0.21"
readcon-core = { version = "0.13", path = "../readcon-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
