[package]
name = "readcon-db"
version = "0.1.1"
edition = "2021"
description = "Mmap-backed CON frame corpus (Heed/LMDB), xxHash exact match, multi-language FFI"
license = "MIT"
repository = "https://github.com/lode-org/readcon-db"
rust-version = "1.75"
readme = "README.md"
keywords = ["con", "trajectory", "lmdb", "mmap", "molecular-dynamics"]
categories = ["database", "science", "api-bindings"]

[lib]
name = "readcon_db"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
python = ["dep:pyo3"]
capi = []

[dependencies]
heed = "0.21"
readcon-core = "0.14"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = false

[[example]]
name = "bench_corpus_ops"
path = "examples/bench_corpus_ops.rs"
