[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "readcon-db"
version = "0.1.2"
description = "Mmap CON corpus store (LMDB/Heed) with xxHash exact match"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
manifest-path = "../Cargo.toml"
features = ["python"]
module-name = "readcon_db"
